add css import and fonts

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <title>Vanilla Modern JavaScript</title>
     <script type="module" src="index.js" crossorigin></script>
     <link rel="import" href="hello.html">
-    <link rel="stylesheet" href="toto.css">
+    <link rel="stylesheet" href="index.css">
   </head>
   <body>
     Normal: <h1>Hello World!!</h1>
