first graphical elements from 2048

--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,15 @@
   <head>
     <title>Vanilla Modern JavaScript</title>
     <script type="module" src="index.js" crossorigin></script>
+    <link rel="import" href="container.html">
+    <link rel="import" href="heading.html">
     <link rel="import" href="hello.html">
     <link rel="stylesheet" href="index.css">
   </head>
   <body>
-    Normal: <h1>Hello World!!</h1>
-    Web Component: <swiip-hello/>
+    <swiip-container>
+      <swiip-heading></swiip-heading>
+      <swiip-hello></swiip-hello>
+    </swiip-container>
   </body>
 </html>
