--- a/public/index.html
+++ b/public/index.html
@@ -2,16 +2,20 @@
 <html>
   <head>
     <title>Vanilla Modern JavaScript</title>
+    <script>window.docs = {};</script>
     <script type="module" src="index.js" crossorigin></script>
+    <script type="module" src="utils/utils.js" crossorigin></script>
     <link rel="import" href="container.html">
     <link rel="import" href="heading.html">
-    <link rel="import" href="hello.html">
+    <link rel="import" href="above-game.html">
+    <link rel="import" href="game.html">
     <link rel="stylesheet" href="index.css">
   </head>
   <body>
     <swiip-container>
       <swiip-heading></swiip-heading>
-      <swiip-hello></swiip-hello>
+      <swiip-above-game></swiip-above-game>
+      <swiip-game></swiip-game>
     </swiip-container>
   </body>
 </html>
