--- a/public/heading.html
+++ b/public/heading.html
@@ -26,7 +26,7 @@
   }
 
   .scores-container > div {
-    background-color: #bbada0;
+    background-color: var(--light-bg-brown);
     color: white;
     padding: 20px 25px 10px 25px;
     font-size: 25px;
@@ -39,7 +39,7 @@
   }
 
   .scores-container > div:after {
-    color: #eee4da;
+    color: var(--disable-text-white);
     display: block;
     position: absolute;
     width: 100%;
