--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,9 @@
     <title>Vanilla Modern JavaScript</title>
     <script>window.docs = {};</script>
     <script type="module" src="index.js" crossorigin></script>
-    <script type="module" src="utils/utils.js" crossorigin></script>
+    <script type="module" src="/utils/utils.js" crossorigin></script>
+    <script type="module" src="/logic/store.js" crossorigin></script>
+    <script type="module" src="/game/conf.js" crossorigin></script>
     <link rel="import" href="container.html">
     <link rel="import" href="heading.html">
     <link rel="import" href="above-game.html">
