add vdom implem, use it in game board

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
     <script type="module" src="/utils/utils.js" crossorigin></script>
     <script type="module" src="/logic/store.js" crossorigin></script>
     <script type="module" src="/game/conf.js" crossorigin></script>
+    <script type="module" src="/render/render.js" crossorigin></script>
+    <script type="module" src="/render/parser.js" crossorigin></script>
     <link rel="import" href="container.html">
     <link rel="import" href="heading.html">
     <link rel="import" href="above-game.html">
