--- a/public/game.html
+++ b/public/game.html
@@ -1,8 +1,17 @@
 <template>
-  <div class="game-container">
+  <!-- <div class="game-container">
     <div class="grid-container"></div>
-    <div class="tile-container"></div>
-  </div>
+    <div class="tile-container">
+      <for :collection="tiles" :var="tile">
+        <div :class="`tile tile${tile.value}`" :style="`
+          top: ${20 + 120 * cell.row}px;
+          left: ${20 + 120 * cell.column}px;
+        `" :value="tile.value"></div>
+      </for>
+    </div>
+  </div> -->
+
+  <root></root>
 
   <style>
   .game-container {
@@ -37,6 +46,10 @@
 
     transition: all .3s ease;
     animation: .3s appear;
+  }
+
+  .merged {
+    z-index: 9;
   }
 
   .tile2 {
@@ -126,6 +139,9 @@ import { range } from "/utils/utils.js";
 import store from "/logic/store.js";
 import { move } from "/logic/actions.js";
 
+import { updateElement } from "/render/render.js";
+import { parser } from "/render/parser.js";
+
 import { size } from "/game/conf.js";
 
 class Game extends HTMLElement {
@@ -138,13 +154,14 @@ class Game extends HTMLElement {
 
     const template = window.docs.Game.querySelector("template");
     this.shadowRoot.appendChild(template.content.cloneNode(true));
+    this.root = this.shadowRoot.querySelector("root");
   }
 
   connectedCallback() {
-    this.tileContainer = this.shadowRoot.querySelector(".tile-container");
+    // this.tileContainer = this.shadowRoot.querySelector(".tile-container");
     this.tiles = {};
 
-    this.buildGrid();
+    // this.buildGrid();
 
     store.subscribe(() => this.updateTiles());
     this.updateTiles();
@@ -152,77 +169,127 @@ class Game extends HTMLElement {
     this.listenKeyboard();
   }
 
-  buildGrid() {
-    const gameContainer = this.shadowRoot.querySelector(".grid-container");
-    range(size).forEach(x => {
-      range(size).forEach(y => {
-        const cell = document.createElement("div");
-        cell.classList.add("grid-cell");
-        cell.style.top = `${20 + 120 * y}px`;
-        cell.style.left = `${20 + 120 * x}px`;
-        gameContainer.appendChild(cell);
-      });
-    });
-  }
+  // buildGrid() {
+  //   const gameContainer = this.shadowRoot.querySelector(".grid-container");
+  //   range(size).forEach(x => {
+  //     range(size).forEach(y => {
+  //       const cell = document.createElement("div");
+  //       cell.classList.add("grid-cell");
+  //       cell.style.top = `${20 + 120 * y}px`;
+  //       cell.style.left = `${20 + 120 * x}px`;
+  //       gameContainer.appendChild(cell);
+  //     });
+  //   });
+  // }
 
   listenKeyboard() {
     window.addEventListener("keydown", event => this.keyHandler(event));
   }
 
-  addTile(cell) {
-    const tile = document.createElement("div");
-    this.updateTile(tile, cell);
-    this.tileContainer.appendChild(tile);
-    return tile;
-  }
-
-  updateTile(tile, cell) {
-    tile.className = "";
-    tile.classList.add("tile");
-    tile.classList.add(`tile${cell.value}`);
-    tile.style.top = `${20 + 120 * cell.row}px`;
-    tile.style.left = `${20 + 120 * cell.column}px`;
-    tile.textContent = cell.value;
-  }
-
-  updateMergedTile(tile, cell) {
-    this.updateTile(tile, cell);
-    tile.classList.add("merged");
-  }
+  // addTile(cell) {
+  //   const tile = document.createElement("div");
+  //   this.updateTile(tile, cell);
+  //   this.tileContainer.appendChild(tile);
+  //   return tile;
+  // }
+  //
+  // updateTile(tile, cell) {
+  //   tile.className = "";
+  //   tile.classList.add("tile");
+  //   tile.classList.add(`tile${cell.value}`);
+  //   tile.style.top = `${20 + 120 * cell.row}px`;
+  //   tile.style.left = `${20 + 120 * cell.column}px`;
+  //   tile.textContent = cell.value;
+  // }
+  //
+  // updateMergedTile(tile, cell) {
+  //   this.updateTile(tile, cell);
+  //   tile.classList.add("merged");
+  // }
 
   updateTiles() {
-    const tileContainer = this.shadowRoot.querySelector(".tile-container");
+    // const tileContainer = this.shadowRoot.querySelector(".tile-container");
 
     const { board } = store.getState();
 
-    const newTiles = {};
+    const tiles = [];
 
     board.forEach(rows => {
       rows.forEach(cell => {
-        if (this.tiles.hasOwnProperty(cell.id)) {
-          this.updateTile(this.tiles[cell.id], cell);
-          newTiles[cell.id] = this.tiles[cell.id];
-        } else if (cell.value > 0) {
-          const newTile = this.addTile(cell);
-          newTiles[cell.id] = newTile;
+        if (cell.value > 0) {
+          tiles.push(cell);
         }
-        if (Array.isArray(cell.merged)) {
-          cell.merged.forEach(mergedCell => {
-            this.updateMergedTile(this.tiles[mergedCell.id], cell);
-            newTiles[mergedCell.id] = this.tiles[mergedCell.id];
-          });
+        if (Array.isArray(cell.mergedTiles)) {
+          tiles.push(...cell.mergedTiles);
         }
       });
     });
 
-    const existingTiles = tileContainer.querySelectorAll(".tile");
-    existingTiles.forEach(existingTile => {
-      if (!Object.values(newTiles).includes(existingTile)) {
-        existingTile.remove();
-      }
-    });
+    const newDom = parser`
+      <div class="game-container">
+        <div class="grid-container">
+          ${range(size).map(x =>
+            range(size).map(
+              y =>
+                `<div
+                  class="grid-cell"
+                  style="
+                    top: ${20 + 120 * y}px;
+                    left: ${20 + 120 * x}px;
+                  ">
+                </div>`
+            )
+          )}
+        </div>
+        <div class="tile-container">
+          ${tiles.map(
+            tile => `
+              <div
+                class="tile tile${tile.value} ${tile.merged ? "merged" : ""}"
+                style="
+                  top: ${20 + 120 * tile.row}px;
+                  left: ${20 + 120 * tile.column}px;
+                ">
+                ${tile.value}
+              </div>
+            `
+          )}
+        </div>
+      </div>
+    `;
 
-    this.tiles = newTiles;
+    updateElement(this.root, newDom, this.oldDom);
+
+    this.oldDom = newDom;
+
+    // const newTiles = {};
+    //
+    // board.forEach(rows => {
+    //   rows.forEach(cell => {
+    //     if (this.tiles.hasOwnProperty(cell.id)) {
+    //       this.updateTile(this.tiles[cell.id], cell);
+    //       newTiles[cell.id] = this.tiles[cell.id];
+    //     } else if (cell.value > 0) {
+    //       const newTile = this.addTile(cell);
+    //       newTiles[cell.id] = newTile;
+    //     }
+    //     if (Array.isArray(cell.merged)) {
+    //       cell.merged.forEach(mergedCell => {
+    //         this.updateMergedTile(this.tiles[mergedCell.id], cell);
+    //         newTiles[mergedCell.id] = this.tiles[mergedCell.id];
+    //       });
+    //     }
+    //   });
+    // });
+    //
+    // const existingTiles = tileContainer.querySelectorAll(".tile");
+    // existingTiles.forEach(existingTile => {
+    //   if (!Object.values(newTiles).includes(existingTile)) {
+    //     existingTile.remove();
+    //   }
+    // });
+    //
+    // this.tiles = newTiles;
   }
 
   keyHandler(event) {
