--- a/public/game.html
+++ b/public/game.html
@@ -1,16 +1,4 @@
 <template>
-  <!-- <div class="game-container">
-    <div class="grid-container"></div>
-    <div class="tile-container">
-      <for :collection="tiles" :var="tile">
-        <div :class="`tile tile${tile.value}`" :style="`
-          top: ${20 + 120 * cell.row}px;
-          left: ${20 + 120 * cell.column}px;
-        `" :value="tile.value"></div>
-      </for>
-    </div>
-  </div> -->
-
   <root></root>
 
   <style>
@@ -139,7 +127,7 @@ import { range } from "/utils/utils.js";
 import store from "/logic/store.js";
 import { move } from "/logic/actions.js";
 
-import { updateElement } from "/render/render.js";
+import { update } from "/render/render.js";
 import { dom } from "/render/parser.js";
 
 import { size } from "/game/conf.js";
@@ -158,10 +146,7 @@ class Game extends HTMLElement {
   }
 
   connectedCallback() {
-    // this.tileContainer = this.shadowRoot.querySelector(".tile-container");
     this.tiles = {};
-
-    // this.buildGrid();
 
     store.subscribe(() => this.updateTiles());
     this.updateTiles();
@@ -169,47 +154,11 @@ class Game extends HTMLElement {
     this.listenKeyboard();
   }
 
-  // buildGrid() {
-  //   const gameContainer = this.shadowRoot.querySelector(".grid-container");
-  //   range(size).forEach(x => {
-  //     range(size).forEach(y => {
-  //       const cell = document.createElement("div");
-  //       cell.classList.add("grid-cell");
-  //       cell.style.top = `${20 + 120 * y}px`;
-  //       cell.style.left = `${20 + 120 * x}px`;
-  //       gameContainer.appendChild(cell);
-  //     });
-  //   });
-  // }
-
   listenKeyboard() {
     window.addEventListener("keydown", event => this.keyHandler(event));
   }
 
-  // addTile(cell) {
-  //   const tile = document.createElement("div");
-  //   this.updateTile(tile, cell);
-  //   this.tileContainer.appendChild(tile);
-  //   return tile;
-  // }
-  //
-  // updateTile(tile, cell) {
-  //   tile.className = "";
-  //   tile.classList.add("tile");
-  //   tile.classList.add(`tile${cell.value}`);
-  //   tile.style.top = `${20 + 120 * cell.row}px`;
-  //   tile.style.left = `${20 + 120 * cell.column}px`;
-  //   tile.textContent = cell.value;
-  // }
-  //
-  // updateMergedTile(tile, cell) {
-  //   this.updateTile(tile, cell);
-  //   tile.classList.add("merged");
-  // }
-
   updateTiles() {
-    // const tileContainer = this.shadowRoot.querySelector(".tile-container");
-
     const { board } = store.getState();
 
     const tiles = [];
@@ -247,6 +196,7 @@ class Game extends HTMLElement {
             .map(
               tile =>
                 `<div
+                  key="${tile.id}"
                   class="tile tile${tile.value} ${tile.merged ? "merged" : ""}"
                   style="top: ${20 + 120 * tile.row}px; left: ${20 +
                   120 * tile.column}px;">
@@ -260,38 +210,7 @@ class Game extends HTMLElement {
 
     console.log("next dom", newDom);
 
-    updateElement(this.root, newDom);
-
-    // this.oldDom = newDom;
-
-    // const newTiles = {};
-    //
-    // board.forEach(rows => {
-    //   rows.forEach(cell => {
-    //     if (this.tiles.hasOwnProperty(cell.id)) {
-    //       this.updateTile(this.tiles[cell.id], cell);
-    //       newTiles[cell.id] = this.tiles[cell.id];
-    //     } else if (cell.value > 0) {
-    //       const newTile = this.addTile(cell);
-    //       newTiles[cell.id] = newTile;
-    //     }
-    //     if (Array.isArray(cell.merged)) {
-    //       cell.merged.forEach(mergedCell => {
-    //         this.updateMergedTile(this.tiles[mergedCell.id], cell);
-    //         newTiles[mergedCell.id] = this.tiles[mergedCell.id];
-    //       });
-    //     }
-    //   });
-    // });
-    //
-    // const existingTiles = tileContainer.querySelectorAll(".tile");
-    // existingTiles.forEach(existingTile => {
-    //   if (!Object.values(newTiles).includes(existingTile)) {
-    //     existingTile.remove();
-    //   }
-    // });
-    //
-    // this.tiles = newTiles;
+    update(this.root, newDom);
   }
 
   keyHandler(event) {
