--- a/public/grid.html
+++ b/public/grid.html
@@ -37,7 +37,8 @@ import { range } from "/utils/utils.js";
 import { update } from "/render/render.js";
 import { dom } from "/render/parser.js";
 
-import { size } from "/game/conf.js";
+// import { size } from "/game/conf.js";
+const size = 4;
 
 class Grid extends HTMLElement {
   constructor() {
