simplify worker store

--- a/public/game.html
+++ b/public/game.html
@@ -25,10 +25,7 @@ window.docs.Game = document.currentScript.ownerDocument;
 </script>
 
 <script type="module">
-// import store from "/logic/store.js";
-// im port { move } from "/logic/actions.js";
-
-import { store } from "/index.js";
+import { store } from "/logic/connector.js";
 
 class Game extends HTMLElement {
   constructor() {
@@ -59,11 +56,6 @@ class Game extends HTMLElement {
       ArrowDown: 3
     };
     if (keyMapping[event.key] !== undefined) {
-      // move(keyMapping[event.key], store);
-      // store.dispatch({
-      //   type: "metaActionMove",
-      //   payload: keyMapping[event.key]
-      // });
       store.dispatch({
         type: "MOVE",
         direction: keyMapping[event.key],
