--- a/public/tiles.html
+++ b/public/tiles.html
@@ -106,9 +106,7 @@ window.docs.Tiles = document.currentScript.ownerDocument;
 <script type="module">
 import { range } from "/utils/utils.js";
 
-// import store from "/logic/store.js";
-// im port { move } from "/logic/actions.js";
-import { store } from "/index.js";
+import { store } from "/logic/connector.js";
 
 import { update } from "/render/render.js";
 import { dom } from "/render/parser.js";
