--- a/public/above-game.html
+++ b/public/above-game.html
@@ -29,23 +29,17 @@
   </style>
 </template>
 
-<script>
-window.docs.AboveGame = document.currentScript.ownerDocument;
-</script>
-
 <script type="module">
-class AboveGame extends HTMLElement {
-  constructor() {
-    super();
+import { attachShadow } from "/render/components.js";
 
-    console.log("AboveGame Constructor");
+customElements.define(
+  "swiip-above-game",
+  class AboveGame extends HTMLElement {
+    constructor() {
+      super();
 
-    this.attachShadow({ mode: "open" });
-
-    const template = window.docs.AboveGame.querySelector("template");
-    this.shadowRoot.appendChild(template.content.cloneNode(true));
+      attachShadow.call(this, "above-game.html");
+    }
   }
-}
-
-customElements.define("swiip-above-game", AboveGame);
+);
 </script>
