--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <script type="module" src="index.js" crossorigin></script>
     <script type="module" src="/utils/utils.js" crossorigin></script>
     <script type="module" src="/render/render.js" crossorigin></script>
+    <script type="module" src="/render/components.js" crossorigin></script>
     <link rel="import" href="container.html">
     <link rel="import" href="heading.html">
     <link rel="import" href="above-game.html">
