--- a/public/hello.html
+++ b/public/hello.html
@@ -5,36 +5,37 @@
 </template>
 
 <script type="module">
-import { attachShadow } from "/render/components.js";
+import { attachTemplate } from "/render/components.js";
 
 import { who } from "./hello.js";
 
-class Hello extends HTMLElement {
-  get who() {
-    return this.getAttribute("who");
-  }
-
-  set who(val) {
-    if (val) {
-      this.setAttribute("who", val);
-    } else {
-      this.removeAttribute("who");
+customElements.define(
+  "swiip-hello",
+  class Hello extends HTMLElement {
+    get who() {
+      return this.getAttribute("who");
     }
-    this.whoChanged();
+
+    set who(val) {
+      if (val) {
+        this.setAttribute("who", val);
+      } else {
+        this.removeAttribute("who");
+      }
+      this.whoChanged();
+    }
+
+    constructor() {
+      super();
+
+      attachTemplate.call(this, "hello.html");
+
+      this.whoChanged();
+    }
+
+    whoChanged() {
+      this.shadowRoot.querySelector("span").innerHTML = this.who;
+    }
   }
-
-  constructor() {
-    super();
-
-    attachShadow.call(this, "hello.html");
-
-    this.whoChanged();
-  }
-
-  whoChanged() {
-    this.shadowRoot.querySelector("span").innerHTML = this.who;
-  }
-}
-
-customElements.define("swiip-hello", Hello);
+);
 </script>
