handle end of games

--- a/public/game.html
+++ b/public/game.html
@@ -1,10 +1,12 @@
 <link rel="import" href="grid.html">
 <link rel="import" href="tiles.html">
+<link rel="import" href="message.html">
 
 <template>
   <div class="game-container">
     <swiip-grid></swiip-grid>
     <swiip-tiles></swiip-tiles>
+    <swiip-message></swiip-message>
   </div>
 
   <style>
