new property based parser

--- a/public/index.html
+++ b/public/index.html
@@ -11,5 +11,6 @@
       <swiip-above-game></swiip-above-game>
       <swiip-game></swiip-game>
     </swiip-container>
+    <swiip-tile></swiip-tile>
   </body>
 </html>
