--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,9 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <title>Vanilla Modern JavaScript</title>
     <script type="module" src="index.js" crossorigin></script>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="index.css" />
   </head>
   <body>
     <swiip-container>
@@ -11,6 +11,5 @@
       <swiip-above-game></swiip-above-game>
       <swiip-game></swiip-game>
     </swiip-container>
-    <swiip-tile></swiip-tile>
   </body>
 </html>
